--- a/config/costmap_common_params.yaml
+++ b/config/costmap_common_params.yaml
@@ -5,10 +5,26 @@ footprint: [[0.387,0.235],[0.387,-0.235],[-0.387,-0.235],[-0.387,0.235]]
 map_topic: /map
 subscribe_to_update: true
 
-observation_sources: laser_scan_sensor
-
-laser_scan_sensor: {sensor_frame: robosense_base_link,data_type: LaserScan, topic: /scan, marking: true , clearing: true, min_obstacle_height: 0}
-
 global_frame: map
 robot_base_frame: base_link
 always_send_full_costmap: true
+
+plugins:
+  - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
+  - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
+
+
+obstacle_layer:
+    observation_sources: laser_scan_sensor
+    laser_scan_sensor: {sensor_frame: robosense_base_link,data_type: LaserScan, topic: /scan, marking: true , clearing: true, min_obstacle_height: 0}
+    enabled: true
+    #obstacle_range: 2.5
+    #raytrace_range: 3.0
+    #max_obstacle_height: 2.0
+    #min_obstacle_height: -2.0
+    inflation_radius: 1.0
+
+inflation_layer:
+  enabled: true
+  cost_scaling_factor: 0.0 
+  inflation_radius: 1.0
